# almedia-hackathon

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.cursor/plans/: fraud_audit_mvp_a3a118b3.plan.md  reliable_fraud_detection_pipeline_87d0f944.plan.md
.cursor/skills/log-code-changes/: SKILL.md
.github/: copilot-instructions.md
backend/: .env.example  pyproject.toml
backend/app/: evidence.py  main.py  models.py  storage.py
backend/app/agent/: __init__.py  auditor.py  verifier.py
backend/app/checks/: __init__.py  __main__.py  library.py  models.py  resolver.py
backend/app/detection/: __init__.py  runner.py
backend/app/ingestion/: __init__.py  normalize.py  pipeline.py
backend/eval/: answer_key.yaml
backend/eval/runs/: 20260718-165907-baseline-score-only.json  20260718-173503-phase2-sol-reuse.json  20260718-174455-phase4-reuse.json
backend/scripts/: eval.py  repopulate_tail.py  smoke_test.py
data/: details-about-hackathon.md  info.md
docs/: mvp.md  roadmap.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatPanel.tsx  EvidenceViewer.tsx  FindingsTable.tsx  ImpactCard.tsx  Pipeline.tsx  PreAnalysisOverlay.tsx  RuledOutList.tsx  UploadCard.tsx
pre-docs/: architecture.md  design.md  hackathon-briefing.canvas.tsx  hackathon-briefing.html  hackathon-briefing.md  prd.md  user-stories.md
tasks/: README.md
