[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-ai-slim[ag-ui,openai]>=2.13.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.51.0",
]
